<resources>
    <string name="app_name">uiTask</string>
    <string name="createAnAccount">Create An Account</string>
    <string name="fullname">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signUp">Sign Up</string>
    <string name="orSignUp">----- Or sign up with -----</string>
    <string name="orSignIn">----- Or sign in with -----</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signIn">"Sign In "</string>
    <string name="welcomeBack">Welcome Back !</string>
    <string name="rememberPassword">Remember Password</string>
    <string name="forgetPassword">Forget Password?</string>
</resources>