<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/purple_image"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcomeBack"
        android:textColor="#271842"
        android:textSize="@dimen/size_30sp"
        android:padding="@dimen/size_10dp"
        android:gravity="center"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_30sp"
        app:cardCornerRadius="@dimen/size_40sp"
        android:padding="@dimen/size_30sp"
        android:elevation="@dimen/size_10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="#271842"
                android:paddingStart="@dimen/size_10dp"
                android:src="@drawable/baseline_email_24"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:paddingStart="@dimen/size_10dp"
                android:hint="@string/email" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_10dp"
        app:cardCornerRadius="@dimen/size_40sp"
        android:padding="@dimen/size_30sp"
        android:elevation="@dimen/size_10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/size_10dp"
                android:backgroundTint="#271842"
                android:src="@drawable/baseline_lock_24"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:paddingStart="@dimen/size_10dp"
                android:layout_weight="1"
                android:hint="@string/password"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="#271842"
                android:src="@drawable/baseline_remove_red_eye_24"
                android:paddingEnd="@dimen/size_10dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_20sp"
        android:layout_marginTop="@dimen/size_10dp"
        android:orientation="horizontal">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkbox"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rememberPassword"
            android:layout_weight="1"
            android:textColor="#271842"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/size_5dp"
            android:text="@string/forgetPassword"
            android:textColor="#BF1508"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_20sp"
        android:text="@string/signUp"
        android:backgroundTint="#271842"
        android:layout_marginLeft="@dimen/size_40sp"
        android:layout_marginRight="@dimen/size_40sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/orSignUp"
        android:textSize="@dimen/size_15sp"
        android:textColor="#271842"
        android:padding="@dimen/size_5dp"
        android:gravity="center"/>
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:rowCount="1"
        android:layout_marginStart="@dimen/size_40sp"
        android:columnCount="3"
        android:layout_marginTop="@dimen/size_40sp"
        android:paddingStart ="@dimen/size_20sp">
        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:elevation="@dimen/size_10dp"
            android:layout_marginEnd="@dimen/size_5dp"
            app:cardCornerRadius="@dimen/size_40sp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/size_10dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:elevation="0dp"
                    android:layout_weight="1"
                    android:src="@drawable/img"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/google"
                    android:layout_gravity="center"
                    android:textColor="#271842"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:elevation="@dimen/size_10dp"
            app:cardCornerRadius="@dimen/size_40sp"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/size_10dp">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_1"
                    android:elevation="0dp"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/facebook"
                    android:layout_gravity="center"
                    android:textColor="#271842"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </GridLayout>
</LinearLayout>
